--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   font-family: "Open Sans", sans-serif;
@@ -53,6 +57,12 @@ nav {
   justify-content: center;
   gap: 15px;
   padding: 10px;
+}
+
+nav {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 
 nav a {
